--- a/applicationsets/demo-vm/kustomize/prod/kustomization.yaml
+++ b/applicationsets/demo-vm/kustomize/prod/kustomization.yaml
@@ -10,7 +10,7 @@ patches:
   - patch: |
       - op: replace
         path: /spec/template/spec/domain/memory/guest
-        value: 2048M
+        value: 4Gi
       - op: replace
         path: /spec/template/spec/volumes/1/cloudInitNoCloud/userData
         value: |-
