--- a/applicationsets/demo-vm/kustomize/dev/kustomization.yaml
+++ b/applicationsets/demo-vm/kustomize/dev/kustomization.yaml
@@ -7,19 +7,16 @@ namePrefix: dev-
           #cloud-config
 patches:
 - patch: |
-    - op: replace
+      - op: replace
         path: /spec/template/spec/domain/memory/guest
         value: 2Gi
-    - op: replace
-      path: /spec/template/spec/volumes/1/cloudInitNoCloud/userData
-      value: |-
-        package_upgrade: true
-        packages:
-          - httpd
-          - gcc
-        runcmd:
-          - systemctl enable httpd
-          - systemctl start httpd
+      - op: replace
+        path: /spec/template/spec/volumes/1/cloudInitNoCloud/userData
+        value: |-
+          #cloud-config
+          user: fedora
+          password: fedora123
+          chpasswd: { expire: False }
   target:
     kind: VirtualMachine
 resources:
