--- a/applicationsets/vm/kustomize/dev/kustomization.yaml
+++ b/applicationsets/vm/kustomize/dev/kustomization.yaml
@@ -8,8 +8,11 @@ namePrefix: dev-
 patches:
 - patch: |
       - op: replace
+        path /spec/running
+        value: false
+      - op: replace
         path: /spec/template/spec/domain/memory/guest
-        value: 4Gi
+        value: 3Gi
       - op: replace
         path: /spec/template/spec/volumes/1/cloudInitNoCloud/userData
         value: |-
