stopping the VM and increasing memory

--- a/applicationsets/vm/kustomize/dev/kustomization.yaml
+++ b/applicationsets/vm/kustomize/dev/kustomization.yaml
@@ -6,7 +6,7 @@ namePrefix: dev-
 patches:
   - patch: |
       - op: replace
-        path /spec/running
+        path: /spec/running
         value: false
       - op: replace
         path: /spec/template/spec/domain/memory/guest
