--- a/applicationsets/vm/kustomize/dev/kustomization.yaml
+++ b/applicationsets/vm/kustomize/dev/kustomization.yaml
@@ -9,6 +9,9 @@ namePrefix: dev-
 patches:
   - patch: |
       - op: replace
+        path: /spec/running
+        value: true
+      - op: replace
         path: /spec/template/spec/domain/memory/guest
         value: 2Gi
       - op: replace
